labs/07-visitor-counter/tailscale-service.yml
apiVersion: v1
kind: Service
metadata:
  name: visitor-counter-tailscale
  annotations:
    tailscale.com/hostname: visitor-counter
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: visitor-counter
  ports:
    - name: http
      port: 80
      targetPort: 5000
