labs/07-visitor-counter/visitor-counter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visitor-counter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: visitor-counter
  template:
    metadata:
      labels:
        app: visitor-counter
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: visitor-counter
              topologyKey: kubernetes.io/hostname
      containers:
        - name: visitor-counter
          image: 192.168.8.191:5000/visitor-counter:2.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: visitor-counter
spec:
  type: NodePort
  selector:
    app: visitor-counter
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
