labs/07-visitor-counter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visitor-counter
  namespace: visitor-counter
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: visitor-app
      port:
        number: 80
  tls:
    - hosts:
        - visitor
